--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ana Ricardo</h1>
-    <img src="images/fotoana.jpg" alt="Ana Photo">
+    <img src="images/fotoana.jpg" alt="Ana Photo" width="300" height="400">
     <h2>Description List:</h2>
     <nav>
         <ul>
